--- a/grammar/build
+++ b/grammar/build
@@ -2,7 +2,6 @@ export CLASSPATH=".:/usr/local/lib/antlr-4.8-complete.jar:$CLASSPATH"
 alias antlr4='java -jar /usr/local/lib/antlr-4.8-complete.jar'
 alias grun='java org.antlr.v4.gui.TestRig'
 
-
 if [[ "$1" == "test" ]]; then
   if [[ -d "test" ]]; then
     rm -rf test
@@ -26,9 +25,13 @@ if [[ "$1" == "test" ]]; then
   if [[ "$2" == "-f" ]]; then
     TEXT=$(cat $3)
 
-    cd ./test/grammar
+    cd ./test
 
     echo $TEXT | grun dgdl game -gui
+
+    #cleanup
+    rm -rf `pwd`
+
   else
 
     echo "Enter expression:"
