--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,2 +1,6 @@
-- name: Python Style Checker
-  uses: andymckay/pycodestyle-action@0.1.3
+on: [push]
+
+jobs:
+  build:
+   name: Python Style Checker
+   uses: andymckay/pycodestyle-action@0.1.3
