--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,5 +2,7 @@ on: [push]
 
 jobs:
   build:
-   name: Python Style Checker
-   uses: andymckay/pycodestyle-action@0.1.3
+    name: Check
+    steps:
+     - name: Python Style Checker
+       uses: andymckay/pycodestyle-action@0.1.3
