--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ on: [push]
 jobs:
   build:
     name: Check
+    runs-on: ubuntu-latest
     steps:
      - name: Python Style Checker
        uses: andymckay/pycodestyle-action@0.1.3
