--- a/grammar/build
+++ b/grammar/build
@@ -1,6 +1,14 @@
+#!/usr/bin/env bash
+
 export CLASSPATH=".:/usr/local/lib/antlr-4.8-complete.jar:$CLASSPATH"
 alias antlr4='java -jar /usr/local/lib/antlr-4.8-complete.jar'
 alias grun='java org.antlr.v4.gui.TestRig'
+
+if [[ "$1"  == "-h" ]]; then
+  echo "USAGE: ./build [test -f <file> | <output_dir>]"
+  echo "  <output_dir> = output directory for generated python files (default is ../src/dgdl/antlr)"
+  exit 1
+fi
 
 if [[ "$1" == "test" ]]; then
   if [[ -d "test" ]]; then
@@ -39,9 +47,14 @@ if [[ "$1" == "test" ]]; then
     grun dgdl game -gui
   fi
 else
-  OUTPUT=$1
 
-  echo $OUTPUT
+  if [[ "$#" == 0 ]]; then
+    OUTPUT="../src/dgdl/antlr"
+  else
+    OUTPUT=$1
+  fi
+
+  echo "Writing to $OUTPUT"
 
   if [[ -d $OUTPUT ]]; then
     rm -rf $OUTPUT
